--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
-
+  provider: ^6.0.0
+  butterfly_sdk_flutter_plugin: ^1.1.2
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
