--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_svg: ^1.0.3
+  fluttercontactpicker: ^4.6.0
 
 dev_dependencies:
   flutter_test:
@@ -72,6 +73,10 @@ flutter:
     - assets/images/circle2.svg
     - assets/images/circle3.svg
     - assets/images/circle3.png
+    - assets/images/plus_sign.svg
+    - assets/images/remove.svg
+    - assets/images/contact_person.svg
+    - assets/images/go_back.svg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
